button mobile fix

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -319,6 +319,9 @@ form select {
 }
 
 .update-btns {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   display: flex;
   margin-top: 20px;
 }
